--- a/rock paper scissors.html
+++ b/rock paper scissors.html
@@ -1,34 +1,32 @@
 <DOCTYPE html>
     <html>
         <head>
-            <title>LocalStorage</title>
-            <style>
-              
-            </style>
+            <title>LocalStorage 10 1</title>
+            <link rel="stylesheet" href="styles\FinalGame_Rock paper scissors.css">
         </head>
 <body> 
-<button 
+    <p class="title">Rock Paper Scissors</p>
+<button  class="move-btn"
     onclick=" 
        ramdomVal = computerMove();
        rezOfCalculation('Rock');
-">
-Rock
+"><img src="images/rock-emoji.png" class="move-icon">
 </button>
 
-<button 
+<button class="move-btn"
     onclick=" 
         ramdomVal = computerMove();
         rezOfCalculation('Paper');
         ">
-    Paper
+    <img src="images/paper-emoji.png" class="move-icon">
 </button>
 
-<button 
+<button class="move-btn"
     onclick=" 
       ramdomVal =  computerMove();
       rezOfCalculation('Scissors');
        ">
-    Scissors
+    <img src="images/Scissors-emoji.png" class="move-icon">
 </button>
 
 <p class="js-computer-result"></p>
@@ -50,91 +48,6 @@ Rock
     Reset score
 </button>
 
-<script>
-
-    let randomNumber;
-    let ramdomVal;
-
-    let score = JSON.parse(localStorage.getItem('score')) ||
-        {
-            win : 0,
-            tie : 0,
-            lose : 0
-        };
-
-    showResults() ;    
-
-    function computerMove() {
-        randomNumber = Math.random();
-        console.log(randomNumber);
-        if (randomNumber <= 0.3) {
-        ramdomVal = 'Rock';
-        }
-    else if (randomNumber > 0.3 && randomNumber <=0.6)   {
-        ramdomVal = 'Paper';
-    }
-    else {ramdomVal = 'Scissors';
-    }
-    document.querySelector('.js-computer-result').innerHTML = ramdomVal;
-return ramdomVal;
-}
-
-function rezOfCalculation(thrownVal) {
-let results;
-    if (thrownVal === 'Rock') {
-        if (ramdomVal === 'Scissors') {
-            score.win = score.win + 1;
-            results = 'You win!!';
-        }
-        else if (ramdomVal === 'Rock') {
-            score.tie = score.tie + 1;
-            results = 'Tie!!';
-        }
-        else {
-            score.lose = score.lose + 1;
-            results = 'You lose( Try again!!';
-        }
-    }
-    else if (thrownVal === 'Paper') {
-        if (ramdomVal === 'Rock') {
-            score.win = score.win + 1;
-            results = 'You win!!';
-        }
-        else if (ramdomVal === 'Paper') {
-            score.tie = score.tie + 1;
-            results = 'Tie!!';
-        }
-        else {
-            score.lose = score.lose + 1;
-            results = 'You lose( Try again!!';
-        }
-    }
-    else if (thrownVal === 'Scissors') {
-        if (ramdomVal === 'Paper') {
-            score.win = score.win + 1;
-            results = 'You win!!';
-        }
-        else if (ramdomVal === 'Scissors') {
-            score.tie = score.tie + 1;
-            results = 'Tie!!';
-        }
-        else {
-            score.lose = score.lose  + 1;
-            results = 'You lose( Try again!!';
-        }
-    }
-    localStorage.setItem('score', JSON.stringify(score));
-    alert(`Computer set ${ramdomVal}. So, ${results}.
-            Total score: Wins:  ${score.win}, Loses: ${score.lose}, Ties: ${score.tie}`);
-    showResults(); 
-    document.querySelector('.js-total-result').innerHTML = 
-        `You: ${thrownVal} - Computer: ${ramdomVal}`;  
-}    
-
-function showResults() {
-    document.querySelector('.js-score').innerHTML = 
-        `Total score: Wins:  ${score.win}, Loses: ${score.lose}, Ties: ${score.tie}`;
-}
-</script>
+<script src="scripts/FinalGame_Rock paper scissors.js"></script>
 </body>
 </html>
