--- a/rock paper scissors.html
+++ b/rock paper scissors.html
@@ -6,26 +6,15 @@
         </head>
 <body> 
     <p class="title">Rock Paper Scissors</p>
-<button  class="move-btn"
-    onclick=" 
-       ramdomVal = computerMove();
-       rezOfCalculation('Rock');
-"><img src="images/rock-emoji.png" class="move-icon">
+<button  class="move-btn js-rock-btn">
+    <img src="images/rock-emoji.png" class="move-icon" >
 </button>
 
-<button class="move-btn"
-    onclick=" 
-        ramdomVal = computerMove();
-        rezOfCalculation('Paper');
-        ">
+<button class="move-btn js-paper-btn ">
     <img src="images/paper-emoji.png" class="move-icon">
 </button>
 
-<button class="move-btn"
-    onclick=" 
-      ramdomVal =  computerMove();
-      rezOfCalculation('Scissors');
-       ">
+<button class="move-btn js-scissors-bt" >
     <img src="images/Scissors-emoji.png" class="move-icon">
 </button>
 
