--- a/rock paper scissors.html
+++ b/rock paper scissors.html
@@ -14,7 +14,7 @@
     <img src="images/paper-emoji.png" class="move-icon">
 </button>
 
-<button class="move-btn js-scissors-bt" >
+<button class="move-btn js-scissors-btn" >
     <img src="images/Scissors-emoji.png" class="move-icon">
 </button>
 
