--- a/rock paper scissors.html
+++ b/rock paper scissors.html
@@ -15,7 +15,7 @@
 </button>
 
 <button class="move-btn js-scissors-btn" >
-    <img src="images/Scissors-emoji.png" class="move-icon">
+    <img src="images/scissors-emoji.png" class="move-icon">
 </button>
 
 <p class="js-computer-result"></p>
