--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <body> 
     <p class="title">Rock Paper Scissors</p>
 <button  class="move-btn js-rock-btn">
-    <img src="images/rock-emoji.png" class="move-icon" >
+    <img src="images/Rock-emoji.png" class="move-icon" >
 </button>
 
 <button class="move-btn js-paper-btn ">
-    <img src="images/paper-emoji.png" class="move-icon">
+    <img src="images/Paper-emoji.png" class="move-icon">
 </button>
 
 <button class="move-btn js-scissors-btn" >
-    <img src="images/scissors-emoji.png" class="move-icon">
+    <img src="images/Scissors-emoji.png" class="move-icon">
 </button>
 
 <p class="js-computer-result"></p>
